--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
                 </div>
             </div>
             <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank" class="random">Random Article?</a>
-
+        </div>
+        <div class="searchsec">
+            <input placeholder="Search..." type="text" class="searchquery">
+            <span class="searchbtn" onclick="searcher()"><i class="fa fa-search fa-2x" aria-hidden="true"></i></span>
+        </div>
+        <div class="col-md-12 row data">
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
